cluster/attic/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  namespace: attic
spec:
  ingressClassName: traefik
  rules:
    - host: attic.chrismiller.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attic
                port:
                  number: 8080
